# RustSerenityOrnekBot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: ban.rs  clear.rs  kick.rs  komut.rs  mod.rs  unban.rs
